--- a/static/index.html
+++ b/static/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
-<html ng-app="yetanothershittyapp">
+<html ng-app="great.app">
   <head>
     <meta charset="utf-8">
-    <title>srsly shitty</title>
+    <title>srsly great</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   </head>
   <body>
-    <p>
-      no seriously, it's really shitty
-    </p>
+    <header>
+      The best of apps
+    </header>
+    <great-app>
+      <greatest-app>
+      </greatest-app>
+    </great-app>
   </body>
 </html>
